# plato_kinodynamic

./: .gitignore  README  pyproject.toml
configs/: config.yaml  copilot_default_logger.yml
configs/estimator/: default.yaml
configs/observer/: default.yaml
plato_copilot/: __init__.py  copilot.py
plato_copilot/games/jenga/: jenga_tower_state.py
plato_copilot/games/jenga/simulation/: jenga_generator.py
plato_copilot/games/jenga/state_estimation/: jenga_block_detector.py  jenga_tower_estimator.py
plato_copilot/kinodynamics/: dynamics_model.py
plato_copilot/neural_networks/: policy_head.py  transformer_modules.py
plato_copilot/policy/visuomotor/: proprio_transformer_policy.py
plato_copilot/utils/: dataset_utils.py  log_utils.py  misc_utils.py  time_utils.py  video_utils.py  vis_utils.py
plato_copilot/vision/: img_utils.py  o3d_utils.py  observer.py  owl_detector.py  owl_sam_processor.py  point_cloud_utils.py  sam_operator.py
plato_copilot/vision_model_configs/: sam_config.yaml
scripts/: 01_generate_rollout_data.py  02_create_datasets.py  03_training_model.py  evaluate_model_rollout.ipynb  evaluate_on_pose_estimations.py  jenga_data_generation_sp.py  visualize_model_rollout.py  visualize_training_data.ipynb  visualize_training_data.py
